--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "expo-image-picker": "~17.0.9",
     "expo-status-bar": "~3.0.9",
     "firebase": "^10.7.1",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-web": "^0.21.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "tailwindcss": "^3.4.19"
+  }
 }
